changed int id to string